--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .container {
   padding: 0 0 1em 0;
   margin-top: 0.5em;
-  width: 282px;  
+  width: 282px;
   background-color: var(--gray);
   display: flex;
   flex-direction: column;
@@ -10,7 +10,6 @@
 
 .cover {
   width: 100%;
- 
 }
 
 .container h2,
@@ -20,4 +19,10 @@
 
 .favorite {
   width: 25px;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--black);
+  text-align: left;
 }
